fix: prevent auto dark mode background in Chrome

--- a/src/app/styles/_globals.scss
+++ b/src/app/styles/_globals.scss
@@ -15,6 +15,8 @@ html, body {
   max-width: 100vw;
   overflow-x: hidden;
   scroll-behavior: smooth;
+  background-color: #fff;
+  color: #000; 
 }
   
 body {
